# sfzq

SFZPlayer/: .gitignore  CMakeLists.txt  SFZSample.h  SFZSamplerSound.cpp  SFZSamplerSound.h  SFZVoice.cpp
SFZPlayer/cmake/: CPM.cmake  SetupSFZero.cmake
SFZPlayer/sfzero_juce/: sfzero_juce.h
SFZPlayer/tests/: CMakeLists.txt
SFZPlayer/tests/sfzero_tests/: CMakeLists.txt
SFZPlayer/tests/sfzero_tests/sf_tests/: CMakeLists.txt  test.cpp
SFZPlayer/tests/test_utils/: CatchTestRunner.cpp  CatchUtils.h  JUCETestRunner.cpp
